# iwasbored

./: .gitignore  README.md
backend/: .env  .env.example  app_state.py  backend.py  create_market.py  logger.py  market_monitor.py  pyproject.toml  run.py  transaction_utils.py
backend/scripts/: start.sh
backend/static/: oracle_abi.json  token_abi.json
contracts/: .env  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_INSTRUCTIONS.md  ETHEREUM_SEPOLIA_GUIDE.md  POLYGON_AMOY_GUIDE.md  PYTH_INTEGRATION.md  README.md  env.example  hardhat.config.js  package-lock.json  package.json
contracts/cache/: solidity-files-cache.json  validations.json
contracts/contracts/: AgeVerification.sol  CTHelpers.sol  ConditionalTokens.sol  ERC20.sol  Factory.sol  FixedProductMarketMaker.sol  MockIdentityVerificationHub.sol  SafeMath.sol  SimplePredictionsOracle.sol
contracts/scripts/: automate-markets.js  buy-position-sepolia.js  check-markets-amoy.js  check-markets-sepolia-enhanced.js  check-markets-sepolia.js  check-scope.js  create-market-amoy.js  create-market-sepolia-enhanced.js  create-market-sepolia.js  deploy-amoy.js  deploy-sepolia.js  deploy-simple.js  deploy.js  redeem-positions-sepolia.js  resolve-market-sepolia.js  test-deployed.js  test-network.js  test-oracle-deployed.js  test-pyth-sepolia.js  verify-contract.js
contracts/test/: AgeVerification.test.js
frontend/: .env  README.md  craco.config.js  env.example  netlify.toml  package-lock.json  package.json
frontend/src/: App.js  chains.js  index.js  useChainDetection.js  wagmiConfig.js  wagmiProvider.js
(+83 files in other folders)
